<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="375dp"
    android:layout_height="812dp"
    tools:context=".cart">

    <ImageView
        android:layout_width="45dp"
        android:layout_height="44dp"
        android:src="@drawable/x2"
        android:layout_marginTop="57dp"
        android:layout_marginLeft="25dp"
        />
    <ImageView
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:src="@drawable/x1"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="30dp"
        />

    <TextView
        android:layout_width="172dp"
        android:layout_height="32dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="135dp"
        android:text="@string/s4"
        android:textColor="@color/den1"
        android:textSize="@dimen/b2"
        android:textStyle="bold" />
    <Button
        android:layout_width="335dp"
        android:layout_height="85dp"
        android:text="@string/s"
        android:background="@drawable/bt_2"
        app:backgroundTint="@null"
        android:textColor="@color/tr"
        android:layout_marginTop="201dp"
        android:layout_marginLeft="20dp"
        />
    <TextView
        android:layout_width="39dp"
        android:layout_height="15dp"
        android:text="@string/a"
        android:textColor="@color/xam2"
        android:textSize="@dimen/b5"
        android:layout_marginTop="215dp"
        android:layout_marginLeft="112dp"
        />

    <ImageView
        android:layout_width="67dp"
        android:layout_height="25dp"
        android:src="@drawable/x6"
        android:layout_marginTop="247dp"
        android:layout_marginLeft="274dp"
        />
    <ImageView
        android:layout_width="61dp"
        android:layout_height="60dp"
        android:src="@drawable/h8"
        android:layout_marginTop="214dp"
        android:layout_marginLeft="31dp"
        />

    <Button
        android:layout_width="335dp"
        android:layout_height="85dp"
        android:text="@string/s"
        android:background="@drawable/bt_2"
        app:backgroundTint="@null"
        android:textColor="@color/tr"
        android:layout_marginTop="304dp"
        android:layout_marginLeft="20dp"
        />
    <ImageView
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:src="@drawable/z1"
        android:layout_marginTop="316dp"
        android:layout_marginLeft="31dp"
        />
    <ImageView
        android:layout_width="67dp"
        android:layout_height="25dp"
        android:src="@drawable/x6"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="274dp"
        />
    <Button
        android:layout_width="335dp"
        android:layout_height="85dp"
        android:text="@string/s"
        android:background="@drawable/bt_2"
        app:backgroundTint="@null"
        android:textColor="@color/tr"
        android:layout_marginTop="407dp"
        android:layout_marginLeft="20dp"
        />
    <ImageView
        android:layout_width="61dp"
        android:layout_height="60dp"
        android:src="@drawable/z2"
        android:layout_marginTop="420dp"
        android:layout_marginLeft="31dp"
        />
    <ImageView
        android:layout_width="67dp"
        android:layout_height="25dp"
        android:src="@drawable/x6"
        android:layout_marginTop="453dp"
        android:layout_marginLeft="274dp"
        />
    <TextView
        android:layout_width="42dp"
        android:layout_height="26dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="526dp"
        android:text="@string/s5"
        android:textColor="@color/den1"
        android:textSize="@dimen/b4"
        android:textStyle="bold" />

    <TextView
        android:layout_width="60dp"
        android:layout_height="26dp"
        android:layout_marginLeft="295dp"
        android:layout_marginTop="528dp"
        android:text="@string/s6"
        android:textColor="@color/cam"
        android:textSize="@dimen/b4"
        android:textStyle="bold" />
    <Button
        android:layout_width="335dp"
        android:layout_height="62dp"
        android:hint="@string/s7"
        android:textColorHint="@color/tr1"
        android:textSize="@dimen/b4"
        android:background="@drawable/bt_4"
        app:backgroundTint="@null"
        android:layout_marginTop="590dp"
        android:layout_marginLeft="20dp"
        />
    <Button
        android:layout_width="375dp"
        android:layout_height="118dp"
        android:text="@string/s"
        android:textColor="@color/white"
        android:background="@drawable/bt_5"
        app:backgroundTint="@null"
        android:layout_marginTop="694dp"
        />

    <ImageView
        android:layout_width="19.79dp"
        android:layout_height="20.89dp"
        android:src="@drawable/x3"
        android:layout_marginTop="731dp"
        android:layout_marginLeft="40dp"
        />
    <ImageView
        android:layout_width="17.02dp"
        android:layout_height="22dp"
        android:src="@drawable/z6"
        android:layout_marginTop="730dp"
        android:layout_marginLeft="105dp"
        />
    <ImageView
        android:layout_width="30dp"
        android:layout_height="25dp"
        android:src="@drawable/z7"
        android:layout_marginTop="730dp"
        android:layout_marginLeft="167dp"
        />
    <ImageView
        android:layout_width="23.83dp"
        android:layout_height="22dp"
        android:src="@drawable/z8"
        android:layout_marginTop="730dp"
        android:layout_marginLeft="242dp"
        />
    <ImageView
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:src="@drawable/x4"
        android:layout_marginTop="718dp"
        android:layout_marginLeft="301dp"
        />
    <ImageView
        android:layout_width="25.85dp"
        android:layout_height="24dp"
        android:src="@drawable/x5"
        android:layout_marginTop="729dp"
        android:layout_marginLeft="316dp"
        />


    <TextView
        android:layout_width="39dp"
        android:layout_height="15dp"
        android:text="@string/s8"
        android:textColor="@color/xam2"
        android:textSize="@dimen/b5"
        android:layout_marginTop="318dp"
        android:layout_marginLeft="112dp"
        />
    <TextView
        android:layout_width="39dp"
        android:layout_height="15dp"
        android:text="@string/s9"
        android:textColor="@color/xam2"
        android:textSize="@dimen/b5"
        android:layout_marginTop="421dp"
        android:layout_marginLeft="112dp"
        />
    <TextView
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:text="@string/a1"
        android:textSize="@dimen/b"
        android:textColor="@color/den"
        android:layout_marginTop="230dp"
        android:layout_marginLeft="112dp"
        />
    <TextView
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:text="@string/s10"
        android:textSize="@dimen/b"
        android:textColor="@color/den"
        android:layout_marginTop="333dp"
        android:layout_marginLeft="112dp"
        />
    <TextView
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:text="@string/s11"
        android:textSize="@dimen/b"
        android:textColor="@color/den"
        android:layout_marginTop="436dp"
        android:layout_marginLeft="112dp"
        />
    <TextView
        android:layout_width="51dp"
        android:layout_height="24dp"
        android:text="@string/c3"
        android:textSize="@dimen/b1"
        android:textColor="@color/cam"
        android:layout_marginTop="456dp"
        android:layout_marginLeft="112dp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="51dp"
        android:layout_height="24dp"
        android:text="@string/c1"
        android:textSize="@dimen/b1"
        android:textColor="@color/cam"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="112dp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="51dp"
        android:layout_height="24dp"
        android:text="@string/c2"
        android:textSize="@dimen/b1"
        android:textColor="@color/cam"
        android:layout_marginTop="353dp"
        android:layout_marginLeft="112dp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="6dp"
        android:layout_height="15dp"
        android:text="@string/c4"
        android:textColor="@color/den1"
        android:textSize="@dimen/b5"
        android:layout_marginTop="253dp"
        android:layout_marginLeft="305dp"
        />
    <TextView
        android:layout_width="6dp"
        android:layout_height="15dp"
        android:text="@string/c4"
        android:textColor="@color/den1"
        android:textSize="@dimen/b5"
        android:layout_marginTop="356dp"
        android:layout_marginLeft="305dp"
        />
    <TextView
        android:layout_width="6dp"
        android:layout_height="15dp"
        android:text="@string/c4"
        android:textColor="@color/den1"
        android:textSize="@dimen/b5"
        android:layout_marginTop="459dp"
        android:layout_marginLeft="305dp"
        />
    <ImageView
        android:layout_width="12dp"
        android:layout_height="1dp"
        android:src="@drawable/c1"
        android:layout_marginTop="259.4dp"
        android:layout_marginLeft="281dp"
        />
    <ImageView
        android:layout_width="12dp"
        android:layout_height="1dp"
        android:src="@drawable/c1"
        android:layout_marginTop="362.4dp"
        android:layout_marginLeft="281dp"
        />
    <ImageView
        android:layout_width="12dp"
        android:layout_height="1dp"
        android:src="@drawable/c1"
        android:layout_marginTop="465.4dp"
        android:layout_marginLeft="281dp"
        />
    <ImageView
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:src="@drawable/c2"
        android:layout_marginTop="255dp"
        android:layout_marginLeft="323dp"
        />
    <ImageView
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:src="@drawable/c2"
        android:layout_marginTop="358dp"
        android:layout_marginLeft="323dp"
        />
    <ImageView
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:src="@drawable/c2"
        android:layout_marginTop="461dp"
        android:layout_marginLeft="323dp"
        />
</RelativeLayout>
