<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="375dp"
    android:layout_height="812dp"
    tools:context=".home"
    android:background="@color/white">
    <TextView
        android:layout_width="85dp"
        android:layout_height="26dp"
        android:text="@string/a2"
        android:textColor="@color/den1"
        android:textSize="@dimen/b2"
        android:textStyle="bold"
        android:layout_marginTop="63dp"
        android:layout_marginLeft="23dp"
        />
    <TextView
        android:layout_width="120dp"
        android:layout_height="26dp"
        android:text="@string/a3"
        android:textColor="@color/den1"
        android:textSize="@dimen/b3"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="23dp"
        />
    <ImageView
        android:layout_width="47.05dp"
        android:layout_height="46dp"
        android:src="@drawable/g1"
        android:layout_marginTop="69dp"
        android:layout_marginLeft="308dp"
        />
    <TextView
        android:layout_width="108dp"
        android:layout_height="26dp"
        android:text="@string/a4"
        android:textSize="@dimen/b4"
        android:textColor="@color/den1"
        android:layout_marginTop="148dp"
        android:layout_marginLeft="23dp"
        android:textStyle="bold"
        />
    <Button
        android:layout_width="158.16dp"
        android:layout_height="176.82dp"
        android:text="@string/a"
        android:textColor="@color/tr"
        android:background="@drawable/bt_2"
        app:backgroundTint = "@null"
        android:layout_marginTop="205dp"
        android:layout_marginLeft="20dp"
        />
    <ImageView
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:src="@drawable/g2"
        android:layout_marginTop="241dp"
        android:layout_marginLeft="72dp"
        />
    <TextView
        android:layout_width="73dp"
        android:layout_height="24dp"
        android:text="@string/a5"
        android:textColor="@color/den1"
        android:textSize="@dimen/b1"
        android:textStyle="bold"
        android:layout_marginTop="305dp"
        android:layout_marginLeft="63dp"
        />
    <TextView
        android:layout_width="65dp"
        android:layout_height="15dp"
        android:text="@string/a6"
        android:textSize="@dimen/b5"
        android:textColor="@color/xam1"
        android:layout_marginTop="333dp"
        android:layout_marginLeft="67dp"
        />

    <Button
        android:layout_width="158.16dp"
        android:layout_height="176.82dp"
        android:text="@string/a"
        android:textColor="@color/tr"
        android:background="@drawable/bt_2"
        app:backgroundTint = "@null"
        android:layout_marginTop="205dp"
        android:layout_marginLeft="196dp"
        />
    <TextView
        android:layout_width="93dp"
        android:layout_height="24dp"
        android:text="@string/a7"
        android:textColor="@color/den1"
        android:textSize="@dimen/b1"
        android:textStyle="bold"
        android:layout_marginTop="305dp"
        android:layout_marginLeft="228dp"
        />
    <TextView
        android:layout_width="82dp"
        android:layout_height="15dp"
        android:text="@string/s"
        android:textSize="@dimen/b5"
        android:textColor="@color/xam1"
        android:layout_marginTop="333dp"
        android:layout_marginLeft="233dp"
        />


    <Button
        android:layout_width="158.16dp"
        android:layout_height="176.82dp"
        android:text="@string/a"
        android:textColor="@color/tr"
        android:background="@drawable/bt_2"
        app:backgroundTint = "@null"
        android:layout_marginTop="396.56dp"
        android:layout_marginLeft="196dp"
        />
    <TextView
        android:layout_width="67dp"
        android:layout_height="24dp"
        android:text="@string/a8"
        android:textColor="@color/den1"
        android:textSize="@dimen/b1"
        android:textStyle="bold"
        android:layout_marginTop="503dp"
        android:layout_marginLeft="67dp"
        />
    <TextView
        android:layout_width="65dp"
        android:layout_height="15dp"
        android:text="@string/a6"
        android:textSize="@dimen/b5"
        android:textColor="@color/xam1"
        android:layout_marginTop="333dp"
        android:layout_marginLeft="67dp"
        />

    <Button
        android:layout_width="158.16dp"
        android:layout_height="176.82dp"
        android:text="@string/a"
        android:textColor="@color/tr"
        android:background="@drawable/bt_2"
        app:backgroundTint = "@null"
        android:layout_marginTop="396.56dp"
        android:layout_marginLeft="20dp"
        />
    <TextView
        android:layout_width="67dp"
        android:layout_height="24dp"
        android:text="@string/a8"
        android:textColor="@color/den1"
        android:textSize="@dimen/b1"
        android:textStyle="bold"
        android:layout_marginTop="503dp"
        android:layout_marginLeft="67dp"
        />
    <TextView
        android:layout_width="69dp"
        android:layout_height="24dp"
        android:text="@string/a9"
        android:textColor="@color/den1"
        android:textSize="@dimen/b1"
        android:textStyle="bold"
        android:layout_marginTop="503dp"
        android:layout_marginLeft="240dp"
        />
    <TextView
        android:layout_width="65dp"
        android:layout_height="15dp"
        android:text="@string/s1"
        android:textSize="@dimen/b5"
        android:textColor="@color/xam1"
        android:layout_marginTop="531dp"
        android:layout_marginLeft="69dp"
        />
    <TextView
        android:layout_width="50dp"
        android:layout_height="15dp"
        android:text="@string/s2"
        android:textSize="@dimen/b5"
        android:textColor="@color/xam1"
        android:layout_marginTop="531dp"
        android:layout_marginLeft="250dp"
        />
    <ImageView
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:src="@drawable/g3"
        android:layout_marginTop="241dp"
        android:layout_marginLeft="247dp"
        />
    <ImageView
        android:layout_width="29dp"
        android:layout_height="25dp"
        android:src="@drawable/g4"
        android:layout_marginTop="256dp"
        android:layout_marginLeft="260dp"
        />

    <ImageView
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:src="@drawable/g5"
        android:layout_marginTop="436dp"
        android:layout_marginLeft="72dp"
        />
    <ImageView
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:src="@drawable/g6"
        android:layout_marginTop="450dp"
        android:layout_marginLeft="86dp"
        />
    <ImageView
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:src="@drawable/g7"
        android:layout_marginTop="436dp"
        android:layout_marginLeft="247dp"
        />
    <ImageView
        android:layout_width="24.05dp"
        android:layout_height="23dp"
        android:src="@drawable/g8"
        android:layout_marginTop="451dp"
        android:layout_marginLeft="263.05dp"
        />
    <TextView
        android:layout_width="112dp"
        android:layout_height="26dp"
        android:text="@string/s3"
        android:textColor="@color/den1"
        android:textSize="@dimen/b4"
        android:textStyle="bold"
        android:layout_marginTop="604dp"
        android:layout_marginLeft="23dp"
        />
    <ImageView
        android:layout_width="27dp"
        android:layout_height="10dp"
        android:src="@drawable/g9"
        android:layout_marginTop="619dp"
        android:layout_marginLeft="327dp"
        />
    <ImageView
        android:layout_width="127dp"
        android:layout_height="125dp"
        android:src="@drawable/z1"
        android:layout_marginTop="661dp"
        android:layout_marginLeft="20dp"
        />
    <ImageView
        android:layout_width="127dp"
        android:layout_height="125dp"
        android:src="@drawable/z2"
        android:layout_marginTop="661dp"
        android:layout_marginLeft="172dp"
        />
    <ImageView
        android:layout_width="127dp"
        android:layout_height="125dp"
        android:src="@drawable/z3"
        android:layout_marginTop="661dp"
        android:layout_marginLeft="324dp"
        />
    <Button
        android:layout_width="375dp"
        android:layout_height="118dp"
        android:text="@string/s"
        android:textColor="@color/white"
        android:background="@drawable/bt_3"
        app:backgroundTint="@null"
        android:layout_marginTop="694dp"
        />
    <ImageView
        android:layout_width="47dp"
        android:layout_height="47dp"
        android:src="@drawable/z4"
        android:layout_marginTop="718dp"
        android:layout_marginLeft="27dp"
        />
    <ImageView
        android:layout_width="19.79dp"
        android:layout_height="20.89dp"
        android:src="@drawable/z5"
        android:layout_marginTop="731dp"
        android:layout_marginLeft="40dp"
        />
    <ImageView
        android:layout_width="17.02dp"
        android:layout_height="22dp"
        android:src="@drawable/z6"
        android:layout_marginTop="730dp"
        android:layout_marginLeft="105dp"
        />
    <ImageView
        android:layout_width="30dp"
        android:layout_height="25dp"
        android:src="@drawable/z7"
        android:layout_marginTop="730dp"
        android:layout_marginLeft="167dp"
        />
    <ImageView
        android:layout_width="23.83dp"
        android:layout_height="22dp"
        android:src="@drawable/z8"
        android:layout_marginTop="730dp"
        android:layout_marginLeft="242dp"
        />
    <ImageView
        android:layout_width="23.85dp"
        android:layout_height="24dp"
        android:src="@drawable/z9"
        android:layout_marginTop="730dp"
        android:layout_marginLeft="311dp"
        />
</RelativeLayout>
