<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="375dp"
    android:layout_height="812dp"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="375dp"
        android:layout_height="812dp"
        android:src="@drawable/h1"
        />
    <ImageView
        android:layout_width="45dp"
        android:layout_height="44dp"
        android:src="@drawable/h2"
        android:layout_marginTop="57dp"
        android:layout_marginLeft="25dp"
        />
    <ImageView
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:src="@drawable/h3"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="30dp"
        />
    <ImageView
        android:layout_width="286dp"
        android:layout_height="259dp"
        android:src="@drawable/h4"
        android:layout_marginTop="386dp"
        android:layout_marginLeft="45dp"
        />
    <ImageView
        android:layout_width="287.5dp"
        android:layout_height="478dp"
        android:src="@drawable/h5"
        android:layout_marginTop="167dp"
        android:layout_marginLeft="44dp"
        />
    <ImageView
        android:layout_width="150dp"
        android:layout_height="3dp"
        android:src="@drawable/h6"
        android:layout_marginTop="387dp"
        android:layout_marginLeft="30dp"
        />
    <ImageView
        android:layout_width="155dp"
        android:layout_height="3dp"
        android:src="@drawable/h7"
        android:layout_marginTop="387dp"
        android:layout_marginLeft="170dp"
        />
    <Button
        android:layout_width="292dp"
        android:layout_height="82dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:background="@drawable/bt_1"
        app:backgroundTint = "@null"
        android:layout_marginTop="677dp"
        android:layout_marginLeft="42dp"
        />
    <ImageView
        android:layout_width="53dp"
        android:layout_height="52dp"
        android:src="@drawable/h8"
        android:layout_marginTop="692dp"
        android:layout_marginLeft="59dp"
        />
    <TextView
        android:layout_width="46dp"
        android:layout_height="18dp"
        android:text="@string/a"
        android:textColor="@color/xam"
        android:textSize="@dimen/b"
        android:layout_marginTop="696dp"
        android:layout_marginLeft="132dp"
        />
    <TextView
        android:layout_width="100dp"
        android:layout_height="24dp"
        android:text="@string/a1"
        android:textSize="@dimen/b1"
        android:textColor="@color/den"
        android:layout_marginTop="715dp"
        android:layout_marginLeft="132dp"
        />
    <ImageView
        android:layout_width="45dp"
        android:layout_height="44dp"
        android:src="@drawable/h10"
        android:layout_marginTop="696dp"
        android:layout_marginLeft="271dp"
        />
    <ImageView
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:src="@drawable/h9"
        android:layout_marginTop="707dp"
        android:layout_marginLeft="283.05dp"
        />
</RelativeLayout>